# ASS2026

./: .gitignore  CLAUDE.md  Java-Starter.pptx  KI_Prompts.md  MODUL5_LEHRBUCH.md  MODUL5_PRESENTATION.md  Module5Prompt.txt  README.md  admin.py  api.py  hello.txt  hr.py  informatik4_modul8_werkzeuge.py  informatik4_oop_java_zu_python.py  main.py  main_modul5.py  mitarbeiter.py  modul3_vererbung.py  modul5_entwurfsmuster.py  modul7_typisierung.py  requirements.txt  run.py  sales.py  test_modul8.py  unternehmen.py
.githooks/: pre-commit
controllers/: ai_service.py  cii_generator.py  cii_parser.py  datum_service.py  facturx_service.py  invoice_mapper.py  invoice_number_sequencer.py  invoice_parser.py  ocr_field_extractor.py  ocr_service.py  validator.py  visual_invoice_renderer.py  xsd_validator.py
java/: README.md  pom.xml
python/: README.md  hello_controller.py  main.py
python0010/: README.md  hello_world.py
python0020/: README.md  pyproject.toml
python0030/: README.md  hello_world.py  main.py  pyproject.toml
python0040/: README.md  hello_world.py  main.py  pyproject.toml
python0050/: README.md  greeter.py  pyproject.toml
python0060/: README.md  hello_world_application.py  main.py  pyproject.toml
python0070/: README.md  app.py  (+3 more)
python0080/: README.md  app.py  pyproject.toml
python0080/tests/: test_app.py
python0090/: README.md  app.py  main.py  models.py  pyproject.toml
python0090/tests/: test_app.py
python0100/: README.md  personen.py  personen_service.py  pyproject.toml
python0100/tests/: test_app.py
python0110/: README.md  app.py  database.py  main.py  orm_models.py  person_dao.py  personen_service.py  pyproject.toml
python0110/tests/: test_app.py
(+110 files in other folders)
